feat: add monitor guidance (#3)